--- a/Deliverable 1.tex
+++ b/Deliverable 1.tex
@@ -225,10 +225,9 @@ In here talk about the work done with the current base solution. It will be orig
 
 To manage the progress of this project efficiently it was important to identify possible risks that could prevent the realisation of the goals laid out earlier in this document. To aid in the identification of the risks the following key was used to classify the associated risks:
 \begin{itemize}
-\item{People (P) - Risks which are the result of issues related to those individuals involved in the engineering of solutions.}
-\item{Technological (T) - Risks which can result from the technology being used to engineer the solutions. This involves the software, hardware and frameworks used.}
-\item{Requirement (R)  - Risks which can result from changes to the requirements of the project. Examples of such being a requirement being dropped from the scope or a requirements priority undergoing a change.}
-\item{Estimation (E) - Risks which result from ill estimations of the project timing, capabilities of an individual or understanding of a certain technology.}
+\item{People (P) - Risks which are the result of issues related to those individuals involved in the project. This relates to the wellbeing, scheduling and personal issues that can be encountered.}
+\item{Technological (T) - Risks which can result from the technology being used to engineer the solutions. This relates to the technologial constraints that could be encountered or the hardware required.}
+\item{Requirement (R)  - Risks which can result from changes to the requirements of the project. This relates to problems encountered with the work being implemented for the project. Logical problems and issues with the material involved would be included in these risks.}
 \end{itemize}
 
 \begin{tabularx}{1.1\textwidth} {
@@ -237,9 +236,9 @@ To manage the progress of this project efficiently it was important to identify 
 	| >{\center\arraybackslash}X
 	| >{\center\arraybackslash} X | }
 	\hline
-	ID & Risk & Risk Type & Description \\
+	ID & Risk & Description \\
 	\hline
-	P/T/R/E1 & Textual Title of Risk & Class of Risk & Textual Description of the Risk \\
+	P/T/R1 & Textual Title of Risk & Textual Description of the Risk \\
 	\hline
 \end{tabularx}
 
@@ -249,9 +248,13 @@ To manage the progress of this project efficiently it was important to identify 
 	| >{\center\arraybackslash}X
 	| >{\center\arraybackslash} X | }
 	\hline
-	ID & Risk & Risk Type & Description \\
+	ID & Risk & Description \\
 	\hline
-	P/T/R/E1 & Textual Title of Risk & Class of Risk & Textual Description of the Risk \\
+	P.1 & Illness and Health Complications & The situation in which an individual involved in the project is unable to contribute due to illness or health complications. This risk is slightly heightened as the world recovers from the effects of the Covid-19 pandemic however it also considers other conditions which would require time away from the project. \\
+	\hline
+	T.1 & File Loss & This is the situation in which files or documents relating to the project is lost. This is a low priority issue as precautions have been taken to mitigate this such as using version control through Github. \\
+	\hline
+	R.1 & Insufficient Base Solution & The success of this project is dependant on having a solid base solution. The success of the base solution is assessed by a set of conditions which deems it suitable for solving the problem. The base solution being unable to meet this conditions is a serious situation and as such should be of a high priority. \\
 	\hline
 \end{tabularx}
 
